@startuml
'https://plantuml.com/sequence-diagram

class User{
- name
- phone
- mail
- password
}
class Group{
- name
- about
- users : List<User>
- expenses : List<Expense>
}
class Expense{
- name
- amount
- createdBy : User
- transactions : List<Transaction>
}
class Transaction{
- payer : User
- amount
}
Group "M" o-- "N" User
Group "1" *-- "M" Expense
Expense "M" o-- "1" User
Expense "1" *-- "M" Transaction
Transaction "M" o-- "1" User
@enduml